--- a/HG002_PAG07506.md
+++ b/HG002_PAG07506.md
@@ -91,7 +91,7 @@ Summary of `lra` quality sequence lacking
 
 ### QC 
 #### hg38
-see [lra QC](https://rawcdn.githack.com/ziphra/repo/tag/file) and [mmi QC](https://rawcdn.githack.com/ziphra/repo/tag/file).
+see [lra QC](https://raw.githack.com/ziphra/long_reads/main/files/HG002_PAG07506_lra_QC.html) and [mmi QC](https://raw.githack.com/ziphra/long_reads/main/files/HG002_PAG07506_mmi_QC.html).
 
 | Alignment summary  | Reads    | Mean coverage | N50   | Median read length | Median identity freq |
 |--------------------|----------|---------------|-------|--------------------|----------------------|
@@ -99,7 +99,7 @@ see [lra QC](https://rawcdn.githack.com/ziphra/repo/tag/file) and [mmi QC](https
 | **lra**            | 2.01E+06 | 23.6          | 86900 | 16000              | 0.963                |
 
 #### hg19
-see [lra QC](https://rawcdn.githack.com/ziphra/repo/tag/file) and [mmi QC](https://rawcdn.githack.com/ziphra/repo/tag/file).
+see [lra QC](https://raw.githack.com/ziphra/long_reads/main/files/HG002_PAG07506_37_lra_QC.html) and [mmi QC](https://raw.githack.com/ziphra/long_reads/main/files/HG002_PAG07506_37_mmi_QC.html).
 
 | Alignment summary  | Reads    | Mean coverage | N50   | Median read length | Median identity freq |
 |--------------------|----------|---------------|-------|--------------------|----------------------|
@@ -107,7 +107,7 @@ see [lra QC](https://rawcdn.githack.com/ziphra/repo/tag/file) and [mmi QC](https
 | lra                | 2.02E+06 | 23.4          | 87000 | 15300              | 0.962                |
 
 #### T2T
-see [lra QC](https://rawcdn.githack.com/ziphra/repo/tag/file) and [mmi QC](https://rawcdn.githack.com/ziphra/repo/tag/file).
+see [lra QC](https://raw.githack.com/ziphra/long_reads/main/files/HG002_PAG07506_t2t_lra_QC.html) and [mmi QC](https://raw.githack.com/ziphra/long_reads/main/files/HG002_PAG07506_t2t_mmi_QC.html).
 
 
 | Alignment summary t2t | Reads    | Mean coverage | N50   | Median read length | Median identity freq |
