--- a/HG002_PAG07506.md
+++ b/HG002_PAG07506.md
@@ -24,6 +24,9 @@
   - [SV-call](#sv-call)
     - [lra-cuteSV](#lra-cutesv)
       - [mmi-Sniffles](#mmi-sniffles)
+  - [Small variants call](#small-variants-call)
+    - [PMDV](#pmdv)
+  - [Small variants call evaluation](#small-variants-call-evaluation)
 
 
 ## Basecalling 
@@ -77,9 +80,9 @@ samtools index $BAM
 Concerning memory requirement, `lra` seems more efficient than `minimap2`.
 
 #### Issue with `lra`
-Reads with no quality sequence causes PMDV pipeline to crash when DeepVariant runs. See DeepVariant issue [#539](https://github.com/google/deepvariant/issues/539)
+Reads with no quality sequence causes PMDV workflow to crash when DeepVariant runs. See DeepVariant issue [#539](https://github.com/google/deepvariant/issues/539) and lra issue [#35](https://github.com/ChaissonLab/LRA/issues/35#issuecomment-1141222305)
 
-Summary of `lra` quality sequence lacking
+Summary of `lra` quality sequence lacking in `bam` file:
 :
 | Sam Flag | Meaning                                         | All       | Q         | No Q    | No Q/Q             |
 |----------|-------------------------------------------------|-----------|-----------|---------|--------------------|
@@ -88,6 +91,23 @@ Summary of `lra` quality sequence lacking
 | **2064**     | Read reverse strand<br>Supplementary alignment  | 174 337   | 170 082   | 4 255   | 0.0244067524392412 |
 | **16**       | Read reverse strand                             | 993 862   | 956 031   | 37 831  | 0.0380646407650157 |
 | **4**        | Read unmapped                                   | 604 014   | 440 413   | 163 601 | 0.27085630465519   |
+
+**To delete all reads that have no quality score:**
+
+```
+# delete reads with a * in the quality sequence solumn ($11) 
+samtools view -@ 16 HG002_PAG07506_38_lra.bam | awk '$11 != "*" { print $0 }' > WQ_HG002_PAG07506_38_lra.sam
+
+# get the header 
+samtools view -H HG002_PAG07506_38_lra.bam > head.txt
+
+# cat the header with the new .sam
+cat head.txt WQ_HG002_PAG07506_38_lra.sam > head_WQ_HG002_PAG07506_38_lra.sam
+
+# convert the .sam back to .bam
+samtools view -h -b head_WQ_HG002_PAG07506_38_lra.sam -o head_WQ_HG002_PAG07506_38_lra.bam
+``` 
+
 
 ### QC 
 #### hg38
@@ -225,6 +245,37 @@ sniffles -i ${MMI_BAM} \
 --tandem-repeats human_GRCh38_no_alt_analysis_set.trf.bed \
 --reference $REF \
 -t 14 
+```
+
+## Small variants call
+### PMDV
+
+
+## Small variants call evaluation
+```
+VCF=/media/euphrasie/Alienware_May202/HG002_PAG07506/pmdv/HG002_PAG07506_37_mmi/output/HG002_PAG07506_37_mmi.vcf.gz
+TRUTH=/media/euphrasie/Alienware_May202/truthset/37/RN_CHR_HG002_GRCh37_1_22_v4.2.1_benchmark.vcf.gz
+BED=/media/euphrasie/Alienware_May202/truthset/37/RN_CHR_HG002_GRCh37_1_22_v4.2.1_benchmark_noinconsistent.bed
+export HG19=/media/euphrasie/DATA/reference_genome/hg19/hg19_std.fa
+OUTPUT_DIR=/media/euphrasie/Alienware_May202/HG002_PAG07506/bench/37_mmi_pmdv
+    
+
+# Run hap.py
+docker run -it \
+-v "${TRUTH}":"${TRUTH}" \
+-v "${VCF}":"${VCF}" \
+-v "/media/euphrasie/DATA/reference_genome/hg19/":"/media/euphrasie/DATA/reference_genome/hg19/" \
+-v "${OUTPUT_DIR}":"${OUTPUT_DIR}" \
+-v "${BED}":"${BED}" \
+jmcdani20/hap.py:v0.3.12 /opt/hap.py/bin/hap.py \
+"${TRUTH}" \
+"${VCF}" \
+-f "${BED}" \
+-r "${HG19}" \
+-o "${OUTPUT_DIR}/happy_output" \
+--pass-only \
+--engine=vcfeval \
+--threads="${THREADS}"
 ```
 
 
