--- a/HG002_PAG07506/HG002_PAG07506.md
+++ b/HG002_PAG07506/HG002_PAG07506.md
@@ -1,5 +1,5 @@
 # HG002 sample ran on PAG07506 flowcell
-- [HG002 sample ran on PAG07506 flowcell](#hg002-sample-ran-on-pag07506-flowcell)
+- [HG002 sample ran on PAG07506 flowcell](#hg002-sample-ran-on-pag07506-flowcell) 
   - [Basecalling](#basecalling)
   - [mapping](#mapping)
     - [minimap2](#minimap2)
@@ -236,7 +236,7 @@ cuteSV ${LRA_BAM} $REF ${LRA_CUTESV}.vcf . \
     --diff_ratio_merging_DEL 0.3 \
     --threads 16
 ```
-#### mmi-Sniffles
+### mmi-Sniffles
 Sniffles recquires bam with MD tags. 
 
 ```
@@ -277,6 +277,61 @@ jmcdani20/hap.py:v0.3.12 /opt/hap.py/bin/hap.py \
 --engine=vcfeval \
 --threads="${THREADS}"
 ```
+
+### hg38 - mmi 
+| Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
+|-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
+| INDEL | 525469      | 338277   | 187192   | 665660      | 124739   | 194352    | 27320 | 39298 | 0.643762      | 0.735334         | 0.291969       | 0.686508        |                        |                        | 1.52827573414             | 1.6732100107              |
+| SNP   | 3365127     | 3344925  | 20202    | 3953730     | 15710    | 592479    | 1740  | 4093  | 0.993997      | 0.995326         | 0.149853       | 0.994661        | 2.10012848676          | 1.98868735538          | 1.58119585325             | 1.53870604477             |
+
+
+### hg38 - lra 
+| Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
+|-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
+| INDEL | 525469      | 298267   | 227202   | 599357      | 121148   | 165091    | 25312 | 41766 | 0.567621      | 0.721028         | 0.275447       | 0.635193        |                        |                        | 1.52827573414             | 1.39912402642             |
+| SNP   | 3365127     | 3321767  | 43360    | 4088394     | 31784    | 744779    | 3669  | 4995  | 0.987115      | 0.990494         | 0.182169       | 0.988802        | 2.10012848676          | 1.91455710637          | 1.58119585325             | 1.45448719643             |
+
+
+### hg19 - mmi 
+| Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
+|-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
+| INDEL | 522391      | 337133   | 185258   | 662865      | 124237   | 193316    | 27117 | 39085 | 0.645365      | 0.735412         | 0.291637       | 0.687452        |                        |                        | 1.51400395697             | 1.68226761178             |
+| SNP   | 3352686     | 3332757  | 19929    | 3866830     | 16697    | 516763    | 1701  | 4180  | 0.994056      | 0.995016         | 0.13364        | 0.994536        | 2.09757296126          | 2.04181451004          | 1.57433458455             | 1.59134695968             |
+
+
+### hg19 - lra 
+| Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
+|-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
+| INDEL | 522390      | 304915   | 217475   | 607368      | 119248   | 166309    | 25031 | 40848 | 0.583692      | 0.729633         | 0.273819       | 0.648554        |                        |                        | 1.51401175761             | 1.47666510608             |
+| SNP   | 3352686     | 3311161  | 41525    | 3820537     | 27362    | 491993    | 3320  | 4945  | 0.987614      | 0.99178          | 0.128776       | 0.989693        | 2.09757296126          | 2.06407150004          | 1.57433458455             | 1.61257583179             |
+
+### t2t - mmi 
+| Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
+|-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
+| INDEL | 525469      | 151025   | 374444   | 423001      | 166037   | 104418    | 10531 | 67162 | 0.28741       | 0.478827         | 0.24685        | 0.359209        |                        |                        | 1.52827573414             | 2.05466563273             |
+| SNP   | 3365127     | 2416789  | 948338   | 2717610     | 14051    | 286445    | 899   | 5617  | 0.718187      | 0.99422          | 0.105403       | 0.833956        | 2.10012848676          | 2.06551665409          | 1.58119585325             | 5.23086518838             |
+
+### t2t - lra
+| Type  | TRUTH.TOTAL | TRUTH.TP | TRUTH.FN | QUERY.TOTAL | QUERY.FP | QUERY.UNK | FP.gt | FP.al | METRIC.Recall | METRIC.Precision | METRIC.Frac_NA | METRIC.F1_Score | TRUTH.TOTAL.TiTv_ratio | QUERY.TOTAL.TiTv_ratio | TRUTH.TOTAL.het_hom_ratio | QUERY.TOTAL.het_hom_ratio |
+|-------|-------------|----------|----------|-------------|----------|-----------|-------|-------|---------------|------------------|----------------|-----------------|------------------------|------------------------|---------------------------|---------------------------|
+| INDEL | 525469      | 135249   | 390220   | 393504      | 163101   | 89453     | 9204  | 67759 | 0.257387      | 0.463574         | 0.227324       | 0.330997        |                        |                        | 1.52827573414             | 1.82372856833             |
+| SNP   | 3365127     | 2396697  | 968430   | 2698555     | 28278    | 278102    | 2137  | 6175  | 0.712216      | 0.988317         | 0.103056       | 0.827852        | 2.10012848676          | 2.08778521586          | 1.58119585325             | 5.29214093658             |
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
