--- a/HG002/HG002_PAG07162.md
+++ b/HG002/HG002_PAG07162.md
@@ -4,15 +4,13 @@
   - [mapping](#mapping)
     - [minimap2](#minimap2)
     - [QC](#qc)
+  - [Small variants call](#small-variants-call)
+    - [PMDV](#pmdv)
+  - [Small variants call evaluation](#small-variants-call-evaluation)
   - [SV-call](#sv-call)
     - [mmi-Sniffles](#mmi-sniffles)
   - [SV call evaluation](#sv-call-evaluation)
     - [truvari](#truvari)
-  - [Small variants call](#small-variants-call)
-    - [PMDV](#pmdv)
-  - [Small variants call evaluation](#small-variants-call-evaluation)
-  - [SV call evaluation](#sv-call-evaluation-1)
-    - [truvari](#truvari-1)
 
 
 ## Basecalling 
@@ -56,18 +54,49 @@ see [QC](https://raw.githack.com/ziphra/long_reads/main/HG002/files/HG002_PAG071
 |--------------------|----------|---------------|-------|--------------------|----------------------|
 | **mmi**            | 9.07E+06 | 63.7          | 19300 | 19300              | 0.970                |
 
-## SV-call
-### mmi-Sniffles
-
-
-## SV call evaluation
-### truvari 
-
 
 ## Small variants call
 ### PMDV
+```
+docker run --ipc=host \
+	--gpus all \
+	-v "${BAMDIR}":"${BAMDIR}" \
+	-v "${OUTPUT_DIR}":"${OUTPUT_DIR}" \
+	-v "${REF}":"${REF}" \
+	kishwars/pepper_deepvariant:r0.8-gpu \
+	run_pepper_margin_deepvariant call_variant \
+	-o "${OUTPUT_DIR}" \
+	-b "${BAM}" \
+	-f "${REF}" \
+	-p "${OUTPUT_PREFIX}" \
+	-t 16 \
+	-g \
+	--ont_r9_guppy5_sup
+  ```
 
 ## Small variants call evaluation
+Benchmarked against Hg38 HG002 GiAB small variants truth set.
+
+| **Type**  | **TRUTH.TOTAL** | **TRUTH.TP** | **TRUTH.FN** | **QUERY.TOTAL** | **QUERY.FP** | **QUERY.UNK** | **FP.gt** | **FP.al** | **METRIC.Recall** | **METRIC.Precision** | **METRIC.Frac_NA** | **METRIC.F1_Score** | **TRUTH.TOTAL.TiTv_ratio** | **QUERY.TOTAL.TiTv_ratio** | **TRUTH.TOTAL.het_hom_ratio** | **QUERY.TOTAL.het_hom_ratio ** |
+|-----------|-----------------|--------------|--------------|-----------------|--------------|---------------|-----------|-----------|-------------------|----------------------|--------------------|---------------------|----------------------------|----------------------------|-------------------------------|--------------------------------|
+| **INDEL** | 525469          | 394601       | 130868       | 863261          | 166108       | 292939        | 24419     | 53062     | 0.75095           | 0.708747             | 0.33934            | 0.729238            |                            |                            | 1.528275734                   | 1.531744641                    |
+| **SNP**   | 3365127         | 3357265      | 7862         | 3987375         | 8409         | 621040        | 1024      | 1992      | 0.997664          | 0.997502             | 0.155752           | 0.997583            | 2.100128487                | 1.964344212                | 1.581195853                   | 1.504930637                    |
+
+
+
+## SV-call
+### mmi-Sniffles
+```
+time sniffles -i $BAM \
+	--vcf $BASE/vc/sniffles/${SAMPLE}_sniffles.vcf \
+	--tandem-repeats $TRF38 \
+	--reference $REF \
+	-t 16
+```
+
 
 ## SV call evaluation
 ### truvari 
+|TP-base|TP-call|FP |FN |precision         |recall            |f1                |base cnt|call cnt|TP-call_TP-gt|TP-call_FP-gt|TP-base_TP-gt|TP-base_FP-gt|gt_concordance    |gt_matrix/(1, 1)/(1, 1)|gt_matrix/(1, 1)/(0, 1)|gt_matrix/(1, 0)/(0, 1)|gt_matrix/(1, 0)/(1, 1)|gt_matrix/(0, 1)/(1, 1)|gt_matrix/(0, 1)/(0, 1)|
+|-------|-------|---|---|------------------|------------------|------------------|--------|--------|-------------|-------------|-------------|-------------|------------------|-----------------------|-----------------------|-----------------------|-----------------------|-----------------------|-----------------------|
+|198    |198    |12 |18 |0.9428571428571428|0.9166666666666666|0.9295774647887323|216     |210     |141          |57           |141          |57           |0.7121212121212122|81                     |1                      |38                     |9                      |9                      |60                     |
