--- a/HG002/HG002_PAG07506.md
+++ b/HG002/HG002_PAG07506.md
@@ -319,10 +319,27 @@ jmcdani20/hap.py:v0.3.12 /opt/hap.py/bin/hap.py \
 
 ## SV call evaluation
 ### truvari 
+```
+truvari bench -b $TRUTHSET -c $VCF  -f $REF -o $OUTPUTDIR --passonly --includebed TRUTHBED
+```
+
+| **Reference** | **Aligner** | **Truth set**   | **Caller** | **TP-base** | **TP-call** | **FP** | **FN** | **precision** | **recall**  |
+|---------------|-------------|-----------------|------------|-------------|-------------|--------|--------|---------------|-------------|
+| **Hg19**      | mmi         | SV tier1        | snf        | 9281        | 9281        | 822    | 360    | 0.918638028   | 0.962659475 |
+| **Hg19**      | lra         | SV tier1        | cutesv     | 8391        | 8391        | 412    | 1250   | 0.953197773   | 0.8703454   |
+| **Hg38**      | lra         | CMRG            | cutesv     | 171         | 171         | 3      | 45     | 0.982758621   | 0.791666667 |
+| **Hg38**      | lra         | SV tier1 lifted | cutesv     | 8045        | 8045        | 481    | 1525   | 0.94358433    | 0.840647858 |
+| **Hg38**      | mmi         | SV tier1 lifted | snf        | 9288        | 9288        | 634    | 282    | 0.936101592   | 0.970532915 |
+| **Hg38**      | mmi         | CMRG            | snf        | 198         | 198         | 8      | 18     | 0.961165049   | 0.916666667 |
+| **t2t**       | lra         | SV tier1 lifted | cutesv     | 2665        | 2665        | 4444   | 3749   | 0.374876917   | 0.41549735  |
+| **t2t**       | mmi         | SV tier1 lifted | snf        | 3195        | 3195        | 5361   | 3219   | 0.37342216    | 0.498129093 |
+| 
 
 
+![](./files/HG0027506_svcall_metrics_lra.png)
 
 
+![](./files/HG0027605_svcall_metrics_mmi.png)
 
 
 
